--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,21 +2,17 @@ version: 0.2
 
 phases:
   install:
-    commands:
-      - echo installing webserver
+     commands:
+      - echo installation webserve
       - sudo apt update
       - sudo apt install apache2 -y
-      
-   build:
-     commands:
-       - echo building file
-       - cp index.html  /var/www/html/
-    
-   post_build:
-     commands:
-       - echo configured
-    
- artifacts:
-     files:
-       - "**/*"
-      
+  build:
+    commands:
+      - echo building file
+      - cp index.html /var/www/html
+  post_build:
+    commands:
+      - echo configured
+artifacts:
+  files:
+     - "*/"
